--- a/Web/Assignment 1.html
+++ b/Web/Assignment 1.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Vania - Exercise 2a</h1>
-<img src="ex2a.jpg" alt="Exercise 2a">
+<img src="Assignment 1.pdf" alt="Assignment 1">
 
 </body>
 </html>
