--- a/Web/Assignment 1.html
+++ b/Web/Assignment 1.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Vania - Exercise 2a</h1>
+<h1>Vania - Assignment 1</h1>
 <img src="Assignment 1.pdf" alt="Assignment 1">
 
 </body>
