--- a/Web/a2.html
+++ b/Web/a2.html
@@ -10,7 +10,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 <meta name="robots" content="noindex">
 <html>
   <head>
-    <title>"Something"</title>
+    <title>Assignment 2</title>
 <meta name="description" content="LA 558 GeoJSON into Leaflet Assignment 2 - 2022" />
 
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" /> <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
