--- a/Web/Assignment 1.html
+++ b/Web/Assignment 1.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Vania - Assignment 1</h1>
-<img src="Assignment 1.pdf" alt="Assignment 1">
+<iframe src="Assignment 1.pdf" alt="Assignment 1" style="width:800px;height:450px;">
 
 </body>
 </html>
